--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 web_fundamentals/algorithms
 web_fundamentals/css/profile_page/icons
 web_fundamentals/css/profile_page/images
+web_fundamentals/belt_exam
