--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ web_fundamentals/algorithms
 web_fundamentals/css/profile_page/icons
 web_fundamentals/css/profile_page/images
 web_fundamentals/belt_exam
+web_fundamentals/belt_practice
+python/algorithms
