--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-/pre_bootcamp
 web_fundamentals/algorithms
 web_fundamentals/css/profile_page/icons
 web_fundamentals/css/profile_page/images
 web_fundamentals/belt_exam
 web_fundamentals/belt_practice
 python/algorithms
+python/introduction
+python/fundamentals/fundamentals
+python/fundamentals/introduction
+python/fundamentals/oop/bank_account.py
+python/fundamentals/oop/user.py
