completed checkerboard assignment

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ python/fundamentals/oop/bank_account.py
 python/fundamentals/oop/user.py
 python/fundamentals/extras
 python/flask/fundamentals/examples
+python/flask/fundamentals/ninja_gold
+python/mysql
