--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ python/fundamentals/extras
 python/flask/fundamentals/examples
 python/flask/fundamentals/ninja_gold
 python/mysql
+python/flask_mysql/db_connection/first_flask_mysql
