--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ python/flask/fundamentals/examples
 python/flask/fundamentals/ninja_gold
 python/mysql
 python/flask_mysql/db_connection/first_flask_mysql
+python/flask_mysql/belt_review
