--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ python/flask/fundamentals/ninja_gold
 python/mysql
 python/flask_mysql/db_connection/first_flask_mysql
 python/belt_exam
+python/belt_exam_redbelt
+python/project
