--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-web_fundamentals
+/web_fundamentals
 web_fundamentals/algorithms
 web_fundamentals/css/profile_page/icons
 web_fundamentals/css/profile_page/images
